--- a/agents-docs/content/docs/typescript-sdk/langfuse-usage.mdx
+++ b/agents-docs/content/docs/typescript-sdk/langfuse-usage.mdx
@@ -3,7 +3,7 @@ title: Using Langfuse for LLM Observability
 sidebarTitle: Langfuse Usage
 description: Complete guide to using Langfuse for LLM observability, tracing, and analytics in the Inkeep Agent Framework
 keywords: Langfuse, LLM observability, tracing, OpenTelemetry, AI monitoring, token usage, model analytics
-icon: "LuActivity"
+icon: "brand/Langfuse"
 ---
 
 Langfuse is an open-source LLM engineering platform that provides specialized observability for AI applications, including token usage tracking, model performance analytics, and detailed LLM interaction tracing.
