new quick start finished

--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -4,143 +4,38 @@ description: Get started with Inkeep's multi-agent framework locally
 icon: "LuRocket"
 ---
 
-# Launch the Visual Builder
-
-### Step 1: Clone the repository
-
-```
-git clone https://github.com/inkeep/agents.git
-cd agents
-```
-
-### Step 2: Configure environment variables
+### Step 1: Create a new agents project
 
 ```bash
-cp agents-manage-api/.env.example agents-manage-api/.env && cp agents-run-api/.env.example agents-run-api/.env && cp agents-manage-ui/.env.example agents-manage-ui/.env && cp examples/.env.example examples/.env
+npx @inkeep/create-agents my-agent-directory
+cd my-agent-directory
 ```
 
-Add your `ANTHROPIC_API_KEY` to an `.env` file at `/agents-run-api/`
-
-```
-ANTHROPIC_API_KEY=sk-ant-xyz789
-```
-
-### Step 3: Setup and install
-
-```bash
-pnpm install
-```
-
-### Step 4: Initialize database
-
-```bash
-pnpm --dir ./packages/agents-core db:push
-```
-
-### Step 5: Run the agent framework
+### Step 2: Start the development server
 
 ```bash
 pnpm dev
 ```
 
-### Step 6: Start building!
-
-Open `http://localhost:3000` in the browser and start building agents.
-
-# Push your first graph
-
-A key advantage of the Inkeep agent framework is its seamless code-to-visual workflow: define your agents programmatically, push them to the visual builder, and continue developing with the intuitive drag-and-drop interface.
-
-Follow the steps below to push your first graph using the [Inkeep CLI](/typescript-sdk/cli-reference).
-
-### Step 1: Download the Inkeep CLI
+### Step 3: Install the Inkeep CLI
 
 ```bash
 pnpm install -g @inkeep/agents-cli
 ```
 
-### Step 2: Push a graph
+### Step 4: Push your first agent graph
 
 ```bash
-cd examples
-inkeep push basic.graph.ts
+cd src/my-project
+inkeep push weather.graph.ts
 ```
 
-<Note>
-  The graph will be pushed to whichever project is specified in the
-  `/examples/inkeep.config.ts` file, which is set to the `default` project by
-  default. Feel free to change it to your own project.
-</Note>
-
-### Step 3: Observe the graph in the visual builder
-
-<img
-  src="/gifs/basic-graph.gif"
-  alt="Basic graph"
-  width="100%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
-/>
-
-# Set up live traces
-
-### Step 1: Launch docker containers
+### Step 5: Start the dashboard server
 
 ```bash
-cd deploy/docker
-docker compose up -d
+inkeep dev
 ```
 
-### Step 2: Fetch SigNoz API Key
+### Step 6: Chat with your agent
 
-Open `http://localhost:3080` in the browser. Go to **Settings** → **Workspace Settings** → **API Keys** and copy the API key.
-
-### Step 3: Configure environment variable
-
-Create a `.env` file at `/agents-manage-ui/` with the following variable:
-
-```
-SIGNOZ_API_KEY=your-signoz-api-key-here
-```
-
-### Step 4: View your live traces
-
-Refresh the live traces panel on the right to see your agents in action.
-
-<img
-  src="/images/live-traces.png"
-  alt="Live traces showing"
-  width="100%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
-/>
-
-# Set up credentials
-
-### Step 1: Create .env file and generate encryption key
-
-```bash
-cp deploy/docker/.env.nango.example deploy/docker/.env && encryption_key=$(openssl rand -base64 32) && sed -i '' "s|REPLACE_WITH_BASE64_256BIT_ENCRYPTION_KEY|$encryption_key|" deploy/docker/.env && echo "Docker environment file created with auto-generated encryption key"
-```
-
-### Step 2: Restart the containers
-
-```bash
-cd deploy/docker
-docker compose up -d
-```
-
-### Step 3: Get your Nango API key
-
-Open the Nango Dashboard: `http://localhost:3050` and navigate to **Environment Settings** → **API Keys** and copy the API key.
-
-### Step 4: Configure environment variables
-
-Navigate back to the root directory and paste the below command. Enter your Nango API key when prompted:
-
-```bash
-cd ../../
-printf "Enter your Nango API key: " && read key && sed -i '' "s|^NANGO_SECRET_KEY=.*|NANGO_SECRET_KEY=$key|" agents-manage-api/.env agents-run-api/.env agents-manage-ui/.env && echo "Application files updated with Nango API key"
-```
-
-### Step 5: Start creating credentials!
-
-Navigate to the Credentials tab in the left sidebar and click "Create credential".
+Go to the project you created, and click into the weather graph. Then click the "Try It" button to begin a conversation with your agent.
