--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -8,26 +8,148 @@ icon: "LuGitPullRequest"
 
 Thank you for your interest in contributing to the Agent Framework! This document provides guidelines and information for contributors.
 
-## Development Setup
+# Launch the Visual Builder
 
-### Prerequisites
+### Step 1: Clone the repository
 
-- Node.js 22+ (see `.nvmrc`)
-- pnpm package manager
-- Docker Desktop (for certain features)
-
-### Installation
-
-```bash
-# Install dependencies
-pnpm install
-
-# Set up the database
-cd inkeep-chat
-pnpm db:push
+```
+git clone https://github.com/inkeep/agents.git
+cd agents
 ```
 
-## Development Workflow
+### Step 2: Configure environment variables
+
+```bash
+cp agents-manage-api/.env.example agents-manage-api/.env && cp agents-run-api/.env.example agents-run-api/.env && cp agents-manage-ui/.env.example agents-manage-ui/.env && cp examples/.env.example examples/.env
+```
+
+Add your `ANTHROPIC_API_KEY` to an `.env` file at `/agents-run-api/`
+
+```
+ANTHROPIC_API_KEY=sk-ant-xyz789
+```
+
+### Step 3: Setup and install
+
+```bash
+pnpm install
+```
+
+### Step 4: Initialize database
+
+```bash
+pnpm --dir ./packages/agents-core db:push
+```
+
+### Step 5: Run the agent framework
+
+```bash
+pnpm dev
+```
+
+### Step 6: Start building!
+
+Open `http://localhost:3000` in the browser and start building agents.
+
+# Push your first graph
+
+A key advantage of the Inkeep agent framework is its seamless code-to-visual workflow: define your agents programmatically, push them to the visual builder, and continue developing with the intuitive drag-and-drop interface.
+
+Follow the steps below to push your first graph using the [Inkeep CLI](/typescript-sdk/cli-reference).
+
+### Step 1: Download the Inkeep CLI
+
+```bash
+pnpm install -g @inkeep/agents-cli
+```
+
+### Step 2: Push a graph
+
+```bash
+cd examples
+inkeep push basic.graph.ts
+```
+
+<Note>
+  The graph will be pushed to whichever project is specified in the
+  `/examples/inkeep.config.ts` file, which is set to the `default` project by
+  default. Feel free to change it to your own project.
+</Note>
+
+### Step 3: Observe the graph in the visual builder
+
+<img
+  src="/gifs/basic-graph.gif"
+  alt="Basic graph"
+  width="100%"
+  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
+/>
+
+# Set up live traces
+
+### Step 1: Launch docker containers
+
+```bash
+cd deploy/docker
+docker compose up -d
+```
+
+### Step 2: Fetch SigNoz API Key
+
+Open `http://localhost:3080` in the browser. Go to **Settings** → **Workspace Settings** → **API Keys** and copy the API key.
+
+### Step 3: Configure environment variable
+
+Create a `.env` file at `/agents-manage-ui/` with the following variable:
+
+```
+SIGNOZ_API_KEY=your-signoz-api-key-here
+```
+
+### Step 4: View your live traces
+
+Refresh the live traces panel on the right to see your agents in action.
+
+<img
+  src="/images/live-traces.png"
+  alt="Live traces showing"
+  width="100%"
+  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
+/>
+
+# Set up credentials
+
+### Step 1: Create .env file and generate encryption key
+
+```bash
+cp deploy/docker/.env.nango.example deploy/docker/.env && encryption_key=$(openssl rand -base64 32) && sed -i '' "s|REPLACE_WITH_BASE64_256BIT_ENCRYPTION_KEY|$encryption_key|" deploy/docker/.env && echo "Docker environment file created with auto-generated encryption key"
+```
+
+### Step 2: Restart the containers
+
+```bash
+cd deploy/docker
+docker compose up -d
+```
+
+### Step 3: Get your Nango API key
+
+Open the Nango Dashboard: `http://localhost:3050` and navigate to **Environment Settings** → **API Keys** and copy the API key.
+
+### Step 4: Configure environment variables
+
+Navigate back to the root directory and paste the below command. Enter your Nango API key when prompted:
+
+```bash
+cd ../../
+printf "Enter your Nango API key: " && read key && sed -i '' "s|^NANGO_SECRET_KEY=.*|NANGO_SECRET_KEY=$key|" agents-manage-api/.env agents-run-api/.env agents-manage-ui/.env && echo "Application files updated with Nango API key"
+```
+
+### Step 5: Start creating credentials!
+
+Navigate to the Credentials tab in the left sidebar and click "Create credential".
+
+# Development Workflow
 
 ### Git Hooks
 
@@ -104,25 +226,7 @@ Build all packages:
 pnpm build
 ```
 
-### Development Server
-
-Start the development server:
-
-```bash
-cd inkeep-chat
-pnpm dev
-```
-
-## Project Structure
-
-This is a monorepo managed with Turborepo. Key packages include:
-
-- `inkeep-chat/` - Main Agent Framework server
-- `agent-builder/` - Builder SDK for declarative agent definitions
-- `cli/` - Command-line interface
-- `chat-widget/` - Web chat widget
-
-## Commit Messages
+# Commit Messages
 
 We follow conventional commit format:
 
@@ -144,7 +248,7 @@ Types:
 - `test`: Test changes
 - `chore`: Build process or auxiliary tool changes
 
-## Pull Requests
+# Pull Requests
 
 1. Fork the repository
 2. Create a feature branch (`git checkout -b feat/amazing-feature`)
@@ -161,7 +265,7 @@ Types:
 - Update documentation as needed
 - Ensure CI passes before requesting review
 
-## Continuous Integration
+# Continuous Integration
 
 Our CI pipeline runs on all pull requests and includes:
 
@@ -171,7 +275,7 @@ Our CI pipeline runs on all pull requests and includes:
 
 These checks must pass before a PR can be merged. The same checks run in pre-commit hooks to catch issues early.
 
-## Questions?
+# Questions?
 
 If you have questions about contributing, please:
 
