--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -10,6 +10,15 @@ icon: "LuRocket"
 npx @inkeep/create-agents my-agent-directory
 cd my-agent-directory
 ```
+### Optional: Install pnpm
+
+If you don't have pnpm yet, use Corepack:
+
+```bash
+npm install -g corepack@latest
+corepack enable pnpm
+corepack use pnpm@latest-10
+```
 
 ### Step 2: Start the development server
 
