--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -50,3 +50,14 @@ To get started, you can try the **open-source** edition (this docs site) or to l
    ```
 
 The **Visual Builder and Agents SDK are fully interoperable**: your technical and non-technical teams can edit and manage agents in either format and switch or collaborate with others at any time.
+
+## Next Steps
+
+<Cards>
+  <Card title="Follow the Quick Start" icon="LuZap" href="/quick-start">
+    Get started with the visual builder and SDK in <5 minutes.
+  </Card>
+  <Card title="Conceptual Overview" icon="LuLightbulb" href="/concepts">
+    Learn about the key concepts of building Agents with Inkeep.
+  </Card>
+</Cards>
